# bibliofile-api

./: Cargo.toml  README.md
migrations/2017-10-29-090512_create_users_and_books/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
templates/: base.html.tera
